more spindexer stuff